Updated the text color

--- a/app/src/main/res/layout/save_changes_confirmation.xml
+++ b/app/src/main/res/layout/save_changes_confirmation.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Are you sure?"
+        android:textColor="@color/primaryText"
         android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="You information will be updated"
+        android:textColor="@color/tertiaryText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView194" />
