--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -38,6 +38,8 @@
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,9 +56,11 @@
         android:ems="10"
         android:fontFamily="@font/poppins_light"
         android:hint="@string/password"
-        android:inputType="text"
+        android:inputType="textPassword"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
+        android:textColor="@color/primaryText"
+        android:textColorHint="@color/tertiaryDarkText"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +75,7 @@
         android:layout_marginEnd="288dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/forgot_password"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,6 +107,7 @@
         android:layout_marginEnd="4dp"
         android:fontFamily="@font/poppins_semibold"
         android:text="@string/don_t_have_an_account"
+        android:textColor="@color/tertiary"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
