--- a/app/src/main/res/layout/cancel_activity_confirmation.xml
+++ b/app/src/main/res/layout/cancel_activity_confirmation.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Your progress will be deleted"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView156" />
