--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,23 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.FitTrack" parent="Theme.AppCompat.Light.NoActionBar">
+<!--        <item name="primary">@color/primary</item>-->
+<!--        <item name="primaryDark">@color/primaryDark</item>-->
+<!--        <item name="secondary">@color/secondary</item>-->
+<!--        <item name="tertiary">@color/tertiary</item>-->
+<!--        <item name="tertiaryDark">@color/tertiaryDark</item>-->
+
+<!--        <item name="primaryText">@color/primaryText</item>-->
+<!--        <item name="secondaryText">@color/secondaryText</item>-->
+<!--        <item name="secondaryDarkText">@color/secondaryDarkText</item>-->
+<!--        <item name="tertiaryText">@color/tertiaryText</item>-->
+<!--        <item name="terDarkText">@color/terDarkText</item>-->
+<!--        <item name="whiteText">@color/whiteText</item>-->
+<!--        <item name="btnText">@color/btnText</item>-->
+
+<!--        <item name="backTabsColor">@color/backTabsColor</item>-->
+<!--        <item name="backgroundColor">@color/backgroundColor</item>-->
+<!--        <item name="btnCancelColor">@color/btnCancelColor</item>-->
     </style>
 
     <style name="Theme.FitTrack" parent="Base.Theme.FitTrack" />
