--- a/app/src/main/res/drawable/back_select.xml
+++ b/app/src/main/res/drawable/back_select.xml
@@ -2,10 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient
-                android:angle="0"
-                android:startColor="@color/primary"
-                android:endColor="@color/primary"/>
+            <solid android:color="@color/primary"/>
             <corners
                 android:radius="10dp"/>
         </shape>
