--- a/app/src/main/res/drawable/circle_progress_bar_primary.xml
+++ b/app/src/main/res/drawable/circle_progress_bar_primary.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
     android:fromDegrees="270"
     android:toDegrees="270">
@@ -7,11 +6,6 @@
         android:shape="ring"
         android:thickness="20dp"
         android:useLevel="true">
-        <gradient
-            android:angle="0"
-            android:endColor="@color/primary"
-            android:startColor="@color/secondary"
-            android:type="sweep"
-            android:useLevel="false"/>
+        <solid android:color="@color/primary" />
     </shape>
 </rotate>
