--- a/app/src/main/res/layout/activity_dashboard_page.xml
+++ b/app/src/main/res/layout/activity_dashboard_page.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -46,7 +47,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/outfit_semi_bold"
                 android:text="Wednesday, March 20"
-                android:textColor="@color/tertiaryText"
+                android:textColor="@color/tertiaryDarkText"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView79"
                 app:layout_constraintTop_toBottomOf="@+id/textView151" />
@@ -372,7 +373,7 @@
                 android:id="@+id/imageView101"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
-                android:layout_marginStart="50dp"
+                android:layout_marginStart="48dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView98"
@@ -467,7 +468,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/outfit_semi_bold"
                 android:text="WATER"
                 android:textColor="@color/primaryText"
@@ -519,21 +520,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/outfit_semi_bold"
                 android:text="SLEEP"
                 android:textColor="@color/primaryText"
                 android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="@+id/imageView101"
+                app:layout_constraintStart_toEndOf="@+id/imAddSleep"
                 app:layout_constraintTop_toTopOf="@+id/imageView101" />
 
             <ImageView
                 android:id="@+id/imAddSleep"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintEnd_toEndOf="@+id/imageView101"
+                app:layout_constraintStart_toStartOf="@+id/imageView101"
                 app:layout_constraintTop_toTopOf="@+id/imageView101"
                 app:srcCompat="@drawable/moon_icon" />
 
@@ -580,7 +581,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:fontFamily="@font/outfit_semi_bold"
                 android:text="FOOD"
                 android:textColor="@color/primaryText"
@@ -690,6 +691,16 @@
                 app:layout_constraintEnd_toEndOf="@+id/pbDashboardWkProgress"
                 app:layout_constraintStart_toStartOf="@+id/pbDashboardWkProgress"
                 app:layout_constraintTop_toTopOf="@+id/pbDashboardWkProgress" />
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintEnd_toEndOf="@+id/imageView101"
+                app:layout_constraintTop_toTopOf="@+id/imageView101"
+                app:srcCompat="@drawable/plus_icon" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
