--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -48,7 +48,7 @@
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/outfit_semi_bold"
                 android:text="Wednesday, March 20"
-                android:textColor="@color/tertiaryText"
+                android:textColor="@color/tertiaryDarkText"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
