--- a/app/src/main/res/layout/activity_step_goal_achieved_banner.xml
+++ b/app/src/main/res/layout/activity_step_goal_achieved_banner.xml
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/rectangle_shape_not_rounded" />
 
     <ImageView
-        android:id="@+id/imageView64"
+        android:id="@+id/imStepBannerBack"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
@@ -40,7 +40,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/imageView62"
-        app:layout_constraintTop_toBottomOf="@+id/imageView64" />
+        app:layout_constraintTop_toBottomOf="@+id/imStepBannerBack" />
 
     <ImageView
         android:id="@+id/imageView65"
@@ -199,7 +199,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Daily Goal"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView65"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
@@ -225,7 +225,7 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="steps"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tvStepBannerGoal"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
