--- a/app/src/main/res/layout/activity_water_intake_tracker.xml
+++ b/app/src/main/res/layout/activity_water_intake_tracker.xml
@@ -8,16 +8,6 @@
     android:background="@color/backgroundColor"
     tools:context=".actWaterIntakeTracker">
 
-    <ImageView
-        android:id="@+id/imBackBtn"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/arrow_left" />
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
@@ -33,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.385"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imBackBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/imWaterTrackerBack" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -50,11 +40,9 @@
         android:id="@+id/imageView2"
         android:layout_width="372dp"
         android:layout_height="360dp"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:srcCompat="@drawable/rectangle_shape" />
@@ -72,7 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
+        app:layout_constraintTop_toBottomOf="@+id/tvWaterTrackerAmountInput" />
 
     <TextView
         android:id="@+id/textView5"
@@ -130,22 +118,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-    <ProgressBar
-        android:id="@+id/pbWaterIntake"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/circle_shape"
-        android:max="100"
-        android:progress="0"
-        android:progressDrawable="@drawable/circle_progress_bar"
-        android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
     <ImageView
         android:id="@+id/imageView74"
         android:layout_width="60dp"
@@ -154,7 +126,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/pbWaterIntake"
+        app:layout_constraintTop_toTopOf="@+id/pbWaterTracker"
         app:srcCompat="@drawable/water_droplet_icon" />
 
     <TextView
@@ -206,7 +178,7 @@
         app:srcCompat="@drawable/square_shape" />
 
     <ImageView
-        android:id="@+id/ivLessWater"
+        android:id="@+id/imDecWater"
         android:layout_width="40dp"
         android:layout_height="40dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView10"
@@ -228,7 +200,7 @@
         app:srcCompat="@drawable/square_shape" />
 
     <ImageView
-        android:id="@+id/ivAddWater"
+        android:id="@+id/imIncWater"
         android:layout_width="38dp"
         android:layout_height="42dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView11"
@@ -238,7 +210,7 @@
         app:srcCompat="@drawable/plus_icon" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/tvWaterTrackerAmountInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -259,10 +231,10 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Daily Goal"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
+        app:layout_constraintTop_toBottomOf="@+id/pbWaterTracker" />
 
     <TextView
         android:id="@+id/tvWaterTrackerGoal"
@@ -275,7 +247,7 @@
         android:textColor="@color/primaryText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/textView145"
-        app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
+        app:layout_constraintTop_toBottomOf="@+id/pbWaterTracker" />
 
     <TextView
         android:id="@+id/textView147"
@@ -285,10 +257,36 @@
         android:layout_marginTop="10dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="ml"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/tvWaterTrackerGoal"
-        app:layout_constraintTop_toBottomOf="@+id/pbWaterIntake" />
+        app:layout_constraintTop_toBottomOf="@+id/pbWaterTracker" />
+
+    <ImageView
+        android:id="@+id/imWaterTrackerBack"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/arrow_left" />
+
+    <ProgressBar
+        android:id="@+id/pbWaterTracker"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/circle_shape"
+        android:max="100"
+        android:progress="0"
+        android:progressDrawable="@drawable/circle_progress_bar_primary"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
