--- a/app/src/main/res/layout/fragment_start_activity.xml
+++ b/app/src/main/res/layout/fragment_start_activity.xml
@@ -10,7 +10,6 @@
         android:id="@+id/imageView50"
         android:layout_width="372dp"
         android:layout_height="200dp"
-        android:layout_marginTop="20dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,12 +39,12 @@
         app:layout_constraintTop_toTopOf="@+id/imageView50" />
 
     <TextView
-        android:id="@+id/textView101"
+        android:id="@+id/tvStartActName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Running"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="13sp"
         app:layout_constraintStart_toEndOf="@+id/imStartActIcon"
         app:layout_constraintTop_toBottomOf="@+id/textView100" />
@@ -58,7 +57,7 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/line_divider"
         app:layout_constraintStart_toStartOf="@+id/imageView50"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <TextView
         android:id="@+id/textView105"
@@ -68,10 +67,10 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Time Start:"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/imageView53"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <TextView
         android:id="@+id/tvStartActCurrentTime"
@@ -94,7 +93,7 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/line_divider"
         app:layout_constraintStart_toEndOf="@+id/tvStartActCurrentTime"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <TextView
         android:id="@+id/textView108"
@@ -104,10 +103,10 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="Set Goal"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/imageView54"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <TextView
         android:id="@+id/tvStartActTimeGoal"
@@ -124,8 +123,8 @@
 
     <TextView
         android:id="@+id/textView110"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="38dp"
+        android:layout_height="31dp"
         android:layout_marginStart="5dp"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="hr/s"
@@ -137,13 +136,13 @@
 
     <ImageView
         android:id="@+id/imageView55"
-        android:layout_width="15dp"
+        android:layout_width="25dp"
         android:layout_height="2dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="40dp"
         android:src="@drawable/line_divider"
         app:layout_constraintStart_toEndOf="@+id/textView110"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <ImageView
         android:id="@+id/imageView56"
@@ -155,27 +154,31 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView50"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/imageView55"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <ImageView
         android:id="@+id/imStartActDecTime"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:src="@drawable/arrow_down_icon"
-        app:layout_constraintStart_toEndOf="@+id/textView110"
+        app:layout_constraintBottom_toTopOf="@+id/btnStartActCancel"
+        app:layout_constraintEnd_toStartOf="@+id/imageView56"
+        app:layout_constraintStart_toStartOf="@+id/imageView50"
         app:layout_constraintTop_toBottomOf="@+id/imageView55" />
 
     <ImageView
         android:id="@+id/imStartActIncTime"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="29dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/arrow_up_icon"
-        app:layout_constraintStart_toEndOf="@+id/textView108"
-        app:layout_constraintTop_toBottomOf="@+id/textView101" />
+        app:layout_constraintEnd_toStartOf="@+id/imageView56"
+        app:layout_constraintStart_toStartOf="@+id/imageView50"
+        app:layout_constraintTop_toBottomOf="@+id/tvStartActName" />
 
     <Button
         android:id="@+id/btnStartActStart"
