--- a/app/src/main/res/layout/sign_out_confirmation.xml
+++ b/app/src/main/res/layout/sign_out_confirmation.xml
@@ -28,7 +28,7 @@
         android:background="@color/backgroundColor"
         android:fontFamily="@font/outfit_semi_bold"
         android:text="We will miss you"
-        android:textColor="@color/tertiaryText"
+        android:textColor="@color/tertiaryDarkText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView192" />
